--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "element-ui": "^2.13.1",
     "highlight.js": "^10.0.3",
     "mavon-editor": "^2.9.0",
+    "moment": "^2.29.0",
     "quill": "^1.3.7",
     "quill-image-drop-module": "^1.0.3",
     "quill-image-resize-module": "^3.0.0",
